[package]
name = "tjson-udf"
version = "0.2.3"
edition = "2024"
authors = ["R.F. Anthracite <rfa@rfanth.com>"]
description = "MariaDB UDF bindings for tjson-rs — parse and render TJSON from SQL"
license = "BSD-3-Clause"
repository = "https://github.com/rfanth/tjson-udf"
homepage = "https://textjson.com"

[lib]
crate-type = ["cdylib"]

[features]
default = []
error-log = []

[dependencies]
udf = "0.5"
tjson = { version = "0.4", package = "tjson-rs" }
serde_json = "1"

[dev-dependencies]
udf = { version = "0.5", features = ["mock"] }
